app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: elontsi007/python-app1
        resources:
          limits:
            memory: "1524Mi"
            cpu: "700m"
        ports:
        - containerPort: 80
