mongodb-service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: mongodb-Service
  spec:
    selector:
      app: mongodb
    ports:
      - protocol: TCP
      port: 27017
      targetPort: 27017
