ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: test-ing.com
      http:
        paths:
        - backend:
            serviceName: kubernetes-dashboard
            servicePort: 80
